--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+// sematic UI css items
+
+$font-family: 'helvetica';
+@import "semantic-ui";
+@import "semantic-ui/collections/menu";
+
+
+.not-logged{
+    background-image: url(../images/RAD_APR_2020.jpg);
+}
+//overriding SEMANTIC UI
+.ui.secondary.segment{
+    background-color: #5CA4A9 !important ;
+    opacity: 0.82 !important ;
+}
+
+.profile-sidebar{
+    //background-color: #E6EBE0 !important;
+}
+
+//pre existing custom css
+
+.larger-text{
+    font-size: x-large !important;
+}
+
+body{
+    background-color: lightgrey;
+}
+
+.info-box{
+    width: 60%;
+    background-color: black;
+}
+
+
+.newbtn{
+    background-color: lavender;
+}
+.newpost_banner {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-image: url(../images/pattern.png);
+	background-repeat: repeat;
+    width: 50%;
+}
+.center {margin-left: auto; margin-right: auto; text-align: center;}
+
+.center-user-image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+/*generated css*/
+@charset "UTF-8";
