--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@charset "UTF-8";
+
+
+.inputs_forty input, .inputs_forty textarea,  .inputs_forty select {
+    width: 40%;
+}
+.likert-labels{
+    padding-left:10px;
+    padding-right:10px;
+}
+
