--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,6 +91,9 @@
     })
   ;
   </script>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="/assets/theme/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/theme/main.css">
 
   </head>
 
