--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,6 +94,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/theme/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/theme/main.css">
+    <%= stylesheet_link_tag "bootstrap.min.css" %>
+      <%= javascript_include_tag "bootstrap.min.js" %>
+      <script src="assets/bootstrap.min.js"></script>
 
   </head>
 
