--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<%= stylesheet_link_tag "bootstrap.min.css" %>
+<%= javascript_include_tag "bootstrap.min.js" %>
+<script src="assets/bootstrap.min.js"></script>
 <div class="container">
 <!-- logged in  with posts-->
 <% if current_user %>
