misc. improvements and styling

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
         <!-- Content -->
           <div class="ui right floated basic segment" style="margin-right: 0px;">
             <h4 class="ui header right aligned">Questions ?</h4>
-            <p><a class="ui brown basic button" href="mailto:c.papacharalampous@student.tue.nl">Contact Us</a></p>
+            <p><a class="ui blue basic button" href="mailto:c.papacharalampous@student.tue.nl">Contact Us</a></p>
           </div>
       </div>
       <!-- Grid column -->
@@ -18,7 +18,7 @@
         <!-- Content -->
         <div class="ui left floated basic segment">
             <h4 class="ui header">Privacy Policy :</h4>
-            <p><a class="ui brown basic button" href="../pages/policy.html.erb">Policy</a></p>
+            <p><a class="ui blue basic button" href="../pages/policy.html.erb">Policy</a></p>
         </div>
       </div>
       <!-- Grid column -->
