--- a/app/views/pages/plans.html.erb
+++ b/app/views/pages/plans.html.erb
@@ -46,6 +46,21 @@
                                 <% end %>
                             <% end %>
                         <% end %>
+                        <% if current_user.commutepref == 0 && current_user.walkpref == 0 %>
+                            <% if meeting.activitytype == 1 %>
+                                <!-- passing params to new post !-->
+                                <div class="event">
+                                    <%= link_to meeting.name, new_post_path(:post => {:title => meeting.name, :created_at => meeting.start_time, :entry_type => meeting.activitytype }) %><i class="icon-chevron-right icon-position"></i>
+                                </div>
+                                <!-- autonomy condition -->
+                                <% if current_user.condition == 1 %>
+                                    <div class="btn ">
+                                        <%= link_to "Edit", edit_meeting_path(meeting.id) %>
+                                    </div>
+                                <% end %>
+                            <% end %>
+                        <% end %>
+
                     <!-- end of filtering -->
                 </div>
             <% end %>
