--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.0.1">
-    <title>ThisIsMyThesis</title>
+    <title>Physical Activity Platform</title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
