corrections and improvements

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
       <div class="ui secondary menu sticky-top container d-flex flex-column flex-md-row justify-content-between">
         <div class="item"><%= link_to "FEED", root_path, class: 'item' %></div>
         <div class="item" ><%= link_to 'NEW ENTRY', pages_newentrypreface_path , class: 'item' %></div>
-        <div class="item" ><%= link_to "PLAN", "/pages/plans", class: 'item'  %></div>
-        <div class="item" ><%= link_to "USER", "/pages/userinfo", class: 'item' %></div>
+        <div class="item" ><%= link_to "PLAN", pages_plans_path, class: 'item'  %></div>
+        <div class="item" ><%= link_to "USER", pages_userinfo_path, class: 'item' %></div>
       </div>
 </header>
