--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,7 +18,7 @@
         <!-- Content -->
         <div class="ui left floated basic segment">
             <h4 class="ui header">Privacy Policy :</h4>
-            <p><a class="ui blue basic button" href="../pages/policy.html.erb">Policy</a></p>
+            <p><%= link_to "Policy", pages_policy_path , class: 'ui blue basic button'%></p>
         </div>
       </div>
       <!-- Grid column -->
