spell check emails

--- a/app/views/reg_mailer/comp_email_4.html.erb
+++ b/app/views/reg_mailer/comp_email_4.html.erb
@@ -36,7 +36,7 @@
                         <div class="content">
                           <div class="header">Activity logging</div>
                           <div class="meta">
-                              <p>Through this feature of the platform you can log your activites in the form of posts. Every activity has a title to fill in and a description to add comments, if you wish. Each activity also has a type to choose from and a timestamp.</p>
+                              <p>Through this feature of the platform you can log your activities in the form of posts. Every activity has a title to fill in and a description to add comments, if you wish. Each activity also has a type to choose from and a timestamp.</p>
                           </div>
                           <div class="description">
                             <p></p>
@@ -47,10 +47,10 @@
                         <div class="content">
                           <div class="header">Activity types</div>
                           <div class="meta">
-                              <p> You are free to choose activity types from a group of low intensity physical activities. Those cover the whole spectrum of physical activity, from sport to commuting, gardening and even housework. The goal to perfom as many low intensity physical activities as you wish. In the <b>"PLANS"</b> section you can find a sample schedule for activity and we higly encourage you to follow it. It is formed under the guideline of the World Health Organisation for a healhty and active daily lifestyle. </p>
+                              <p> You are free to choose activity types from a group of low intensity physical activities. Those cover the whole spectrum of physical activity, from sport to commuting, gardening and even housework. The goal to perfom as many low intensity physical activities as you wish. In the <b>"PLANS"</b> section you can find a sample schedule for activity and we highly encourage you to follow it. It is formed under the guideline of the World Health Organisation for a healhty and active daily lifestyle. </p>
                           </div>
                           <div class="meta">
-                              <p> You are free to choose activity types from the following three low intensity physical activities. Walking and commuting (cycling or else) are good examples of everyday low intensity exercise. If those do not cover your preferences, you can choose <b>"Other"</b>as activity type and type in the description more details of what you did. The goal to perfom as many low intensity physical activities as you wish. In the <b>"PLANS"</b> section you can find a sample schedule for activity and we higly encourage you to follow it. It is formed under the guideline of the World Health Organisation for a healhty and active daily lifestyle. </p>
+                              <p> You are free to choose activity types from the following three low intensity physical activities. Walking and commuting (cycling or else) are good examples of everyday low intensity exercise. If those do not cover your preferences, you can choose <b>"Other"</b>as activity type and type in the description more details of what you did. The goal to perfom as many low intensity physical activities as you wish. In the <b>"PLANS"</b> section you can find a sample schedule for activity and we highly encourage you to follow it. It is formed under the guideline of the World Health Organisation for a healhty and active daily lifestyle. </p>
                           </div>
                           <div class="description">
                             <p></p>
@@ -61,7 +61,7 @@
                         <div class="content">
                           <div class="header">Mood and entertainment</div>
                           <div class="meta">
-                              <p>We want you to think and reflect on which extend you had fun during this activity and what was your mood during that activity. Please don not forget to fill in those two questions through the sliders !</p>
+                              <p>We want you to think and reflect on which extend you had fun during this activity and what was your mood during that activity. Please do not forget to fill in those two questions through the sliders !</p>
                           </div>
                           <div class="description">
                             <p></p>
